# GuilelessBopomofo

./: .gitignore  .gitmodules  .ruby-gemset  CHANGELOG-0.x.md  CHANGELOG-1.x.md  CHANGELOG-2.x.md  CHANGELOG-3.x.md  CHANGELOG-4.x.md  CHANGELOG.md  CLAUDE.md  COPYRIGHT.txt  Gemfile  LICENSE  NOTICES.md  PRIVACY-POLICY.md  README.md  build.gradle  build.gradle.kts  gradle.properties  pubkey.gpg  settings.gradle  settings.gradle.kts
.claude/skills/code-review-and-security-audit/: SKILL.md
.claude/skills/commit-and-push/: SKILL.md
.claude/skills/docs-engineering/: SKILL.md
.claude/skills/release-engineering/: SKILL.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: build.gradle  build.gradle.kts  proguard-rules.pro  rust-toolchain.toml
app/libs/: libchewing_android_app_module_0.8.3-release.aar  libchewing_android_app_module_0.8.4-release.aar  libchewing_android_app_module_0.8.5-release.aar  libchewing_android_app_module_0.9.1.1-release.aar  libchewing_android_app_module_0.9.1.2-release.aar  libchewing_android_app_module_0.9.1.3-release.aar  libchewing_android_app_module_0.9.1.4-release.aar  libchewing_android_app_module_0.9.1.6-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: .gitignore
app/src/main/assets/announcements/: 2026-05-23.md  index.json
app/src/main/cpp/: CMakeLists-libchewing.txt  CMakeLists.txt  chewing-jni.cpp  libchewing_android_jni.cpp  native-lib.cpp
app/src/main/java/: PreEditBufferTextView.kt
app/src/main/res/: resources.properties
app/src/main/res/anim/: popup_hide.xml  popup_show.xml
app/src/main/res/color/: bottom_nav_item_icon_tint.xml  keybutton_background_color_selector.xml
app/src/main/res/drawable/: gradient_ime_background.xml  guileless_bopomofo_keyboard_a.xml  guileless_bopomofo_keyboard_ai.xml  guileless_bopomofo_keyboard_an.xml  guileless_bopomofo_keyboard_ang.xml  guileless_bopomofo_keyboard_ao.xml  guileless_bopomofo_keyboard_b.xml  guileless_bopomofo_keyboard_chi.xml  guileless_bopomofo_keyboard_ci.xml  guileless_bopomofo_keyboard_d.xml  guileless_bopomofo_keyboard_dachen_cp26_ao_ang.xml  guileless_bopomofo_keyboard_dachen_cp26_b_p.xml  guileless_bopomofo_keyboard_dachen_cp26_d_t.xml  guileless_bopomofo_keyboard_dachen_cp26_ei_an.xml  guileless_bopomofo_keyboard_dachen_cp26_en_er.xml  guileless_bopomofo_keyboard_dachen_cp26_g_tone2.xml  guileless_bopomofo_keyboard_dachen_cp26_j_tone3.xml  guileless_bopomofo_keyboard_dachen_cp26_k_tone4.xml  guileless_bopomofo_keyboard_dachen_cp26_o_ai.xml  guileless_bopomofo_keyboard_dachen_cp26_ri_ie.xml  guileless_bopomofo_keyboard_dachen_cp26_si_eng.xml  guileless_bopomofo_keyboard_dachen_cp26_yi_a.xml  guileless_bopomofo_keyboard_dachen_cp26_yu_ou.xml  guileless_bopomofo_keyboard_dachen_cp26_zhi_chi.xml  guileless_bopomofo_keyboard_dachen_cp26_zi_tone_light.xml  guileless_bopomofo_keyboard_e.xml  guileless_bopomofo_keyboard_ei.xml  guileless_bopomofo_keyboard_en.xml  guileless_bopomofo_keyboard_eng.xml  guileless_bopomofo_keyboard_er.xml  guileless_bopomofo_keyboard_et26_ci_ie.xml  guileless_bopomofo_keyboard_et26_d.xml  guileless_bopomofo_keyboard_et26_f.xml  guileless_bopomofo_keyboard_et26_g_q.xml  guileless_bopomofo_keyboard_et26_h_er.xml  guileless_bopomofo_keyboard_et26_j_zhi.xml  guileless_bopomofo_keyboard_et26_k.xml  guileless_bopomofo_keyboard_et26_l_eng.xml  guileless_bopomofo_keyboard_et26_p_ou.xml  guileless_bopomofo_keyboard_et26_ri.xml  (+340 more)
app/src/main/res/layout/: activity_engineering_mode.xml  activity_main.xml  announcement_item_layout.xml  candidate_item_layout.xml  candidates_item_paged_layout.xml  candidates_layout.xml  candidates_paged_layout.xml  compact_layout.xml  dialog_add_user_phrase.xml  dialog_announcement.xml  fragment_announcements.xml  fragment_general_settings.xml  fragment_physical_keyboard_settings.xml  fragment_user_interface_settings.xml  fragment_user_phrase_manager.xml  ime_layout.xml  keyboard_colemak_ansi_layout.xml  keyboard_dachen_layout.xml  keyboard_dvorak_layout.xml  keyboard_et26_layout.xml  keyboard_et26_qwerty_layout.xml  keyboard_et41_layout.xml  keyboard_hsu_dvorak_both_layout.xml  keyboard_hsu_dvorak_dual_layout.xml  keyboard_hsu_dvorak_layout.xml  keyboard_hsu_layout.xml  keyboard_hsu_qwerty_layout.xml  keyboard_layout.xml  keyboard_qwerty_layout.xml  keybutton_popup_layout.xml  keycap_popup_layout.xml  punctuation_picker_layout.xml  punctuation_popup_layout.xml  (+5 more)
app/src/main/res/layout-land/: activity_engineering_mode.xml  activity_main.xml  keyboard_dachen_cp26_layout.xml  keyboard_dachen_layout.xml  keyboard_dvorak_layout.xml  keyboard_et26_layout.xml  keyboard_et26_qwerty_layout.xml  keyboard_et41_layout.xml  keyboard_hsu_dvorak_both_layout.xml  keyboard_hsu_dvorak_dual_layout.xml  keyboard_hsu_dvorak_layout.xml  keyboard_hsu_layout.xml  keyboard_hsu_qwerty_layout.xml  keyboard_qwerty_layout.xml
app/src/main/res/layout-sw600dp/: activity_engineering_mode.xml  activity_main.xml  keyboard_dachen_colemak_ansi_layout.xml  keyboard_dachen_cp26_layout.xml  keyboard_dachen_layout.xml  keyboard_dvorak_layout.xml  keyboard_et26_layout.xml  keyboard_et26_qwerty_layout.xml  keyboard_et41_layout.xml  keyboard_hsu_dvorak_both_layout.xml  keyboard_hsu_dvorak_dual_layout.xml  keyboard_hsu_dvorak_layout.xml  keyboard_hsu_layout.xml  keyboard_hsu_qwerty_layout.xml  keyboard_qwerty_layout.xml
fastlane/: Appfile
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/zh-TW/: full_description.txt  short_description.txt  title.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libchewing-android-module/: build.gradle.kts
libchewing-android-module/src/main/cpp/: CMakeLists.txt  chewing-aar.cpp
media/: dump_emoji.rb  emoji-ordering.txt  emoji-style.txt  emoji_dump.txt
metadata/: org.ghostsinthelab.apps.guilelessbopomofo.yml
scripts/: .gitignore  generate_keycaps_svg.rb
scripts/generate_keycaps_svg/: .gitignore  index.ts  package-lock.json  package.json  tsconfig.json
(+236 files in other folders)
